<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/colorBackground">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:columnCount="4"
        android:rowCount="6"
        tools:ignore="UselessParent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:gravity="end|bottom"
            android:text="@string/button_00"
            android:textSize="30sp"
            android:background="@color/colorText"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1" />

        <Button
            android:id="@+id/button_clearEntry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_clearEntry"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_07"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_07"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_08"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_08"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_09"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_09"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_div"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_04"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_04"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_05"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_05"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_06"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_06"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_mul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_mul"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_01"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_02"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_03"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_03"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_sub"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_dot"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_00"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_result"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:text="@string/button_add"
            android:textSize="20sp" />

    </GridLayout>

</FrameLayout>
